# memguard-rs

./: CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  DEVLOG.md  LICENSE-APACHE  LICENSE-MIT  README.md  SECURITY.md
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md  soundness_report.md
.github/workflows/: audit.yml  ci.yml  miri.yml
benches/: bench.rs
examples/: api_key.rs  no_std_usage.rs
src/: cmp.rs  error.rs  guard.rs  lib.rs  mlock.rs  secret.rs  zeroize.rs
tests/: basic.rs  constant_time.rs
